# oa-v1

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_rbac_and_departments.py  0003_workflow_engine.py  0004_company_portal.py  0005_add_leave_requests.py  0006_add_employee_profiles.py  0007_add_attendance_records.py  52769097cf87_add_assets_and_consumables.py  558e8a4b5f1e_add_messages_table.py  559a1b2c3d4e_add_on_complete_hook_to_workflow_defs.py  5e80f3e8af1a_add_role_type_and_admin_scope.py  660b2c3d4e5f_add_half_day_to_leave_requests.py  770c3d4e5f6a_add_actual_times_to_overtime_requests.py  7bbcace341cb_add_chain_index_to_workflow_tasks.py  880d4e5f6a7b_add_code_prefix_to_asset_categories.py  990e5f6a7b8c_recreate_indexes_and_fix_constraints.py  9c7d699253cf_add_expense_and_overtime_requests.py  caa306041c67_add_notifications_table.py  dadc3ad65f20_add_audit_logs_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  config.py  (+6 more)
backend/tests/: conftest.py  factories.py  test_announcement.py  test_asset.py  test_attendance.py  test_audit.py  test_auth.py  test_consumable.py  test_contacts.py  test_dashboard.py  test_department.py  test_employee.py  test_expense.py  test_leave.py  test_message.py  test_notification.py  test_overtime.py  test_permission.py  test_phase8.py  test_portal.py  test_role.py  test_security.py  test_settings.py  test_user.py  test_workflow.py
(+247 files in other folders)
